fix: shift bg image further top-right

--- a/src/pages/PublicAuctionPage/PublicAuctionPage.module.scss
+++ b/src/pages/PublicAuctionPage/PublicAuctionPage.module.scss
@@ -119,8 +119,8 @@
 .rootWithBg::before {
   content: '';
   position: absolute;
-  top: -40px;
-  right: -50px;
+  top: -80px;
+  right: -100px;
   width: 70%;
   height: 450px;
   background-image: url('./assets/auction-bg.png');
